Fix work and workshop to work in both orientations on mobile

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -96,6 +96,61 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   // section-workshop
   //-------------------------------------
+  #section-workshop-flex {
+    @include flex-container;
+
+    max-width: 1024px;
+    margin: 0 auto;
+    text-align: left;
+
+    .work-right {
+      flex: 1;
+      order: 2;
+      padding: 1em;
+      h1 {
+        font-size: 38px;
+        line-height: 110%;
+        font-weight: 500;
+        margin: 0em 0em;
+      }
+
+      .main {
+        line-height: 2.5em;
+        margin: 2em 0em 2em;
+        font-size: 14px;
+      }
+
+      a {
+        align-self: flex-end;
+      }
+    }
+
+    .work-left {
+      flex: 1;
+      order: 1;
+      padding: 1em;
+
+      .workshop-quote {
+        margin: 4em 0em 3em;
+        .quote {
+          position: relative;
+          text-align: center;
+          .quote-text {
+            margin: auto;
+            max-width: 11em;
+          }
+        }
+
+        .quote-attrib {
+          margin: 0.5em 0em;
+        }
+      }
+
+      img {
+        width: 100%;
+      }
+    }
+  }
 
   //-------------------------------------
   // section-work
